deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wedding-app
  labels:
    app.kubernetes.io/name: wedding-app
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
  selector:
    app.kubernetes.io/name: wedding-app
